switch to jdk17